--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
  * NE PAS TOUCHER AUX LIGNES CI-DESSOUS
  * TRAVAILLEZ A PARTIR DE LA LIGNE 27 !!
  ************************************************************/
-.page{
+ .page{
     width: 900px;
     margin:auto;
 }
@@ -25,13 +25,15 @@
 /************************************************************
  * SAISISSEZ VOS DECLARATIONS CSS EN-DESSOUS DE CETTE LIGNE
  ************************************************************/
-body{
+ body{
 	/* Pour avoir le choix des couleurs https://htmlcolorcodes.com/fr/noms-de-couleur/ */
-    background-color: mediumpurple; 
+    background-color: rgb(0, 110, 255);
+    font-size: 0.8rem;
+    font-family: Verdana;
+    margin: 0;
+    padding: 0;
 }
-.page {
-	background-color: red; 
-}
+
 .entete{
     background-color: hotpink;
 }
@@ -47,7 +49,6 @@ body{
 .pieddepage{
     background-color: lightgray;
 }
-
 
 
 
