--- a/style.css
+++ b/style.css
@@ -58,14 +58,53 @@
     background-color: gold;
 }
 .colonne_contenu {
-    background-color: lightgreen;
+    background-color: rgb(255, 255, 255);
+    margin:10px;
 }
 .pieddepage{
     background-color: rgb(105, 175, 255);
     color: rgb(15, 75, 72); 
     text-align: center;
-    
+    line-height: 50px;
 }
 
+h1{
+    background-color: aquamarine;
+    margin: 10px;
+    margin-bottom: 20px;
+    border-bottom: 5px solid rgb(0, 92, 128) ;
 
+}
 
+h2{
+    color: rgb(0, 110, 255);
+    font-size: 1rem;
+    margin: 20px;
+    font-variant: small-caps;
+}
+
+strong{
+    color:rgb(53, 105, 105);
+    font-weight: 400;
+}
+
+em{
+    color: rgb(127, 146, 255);
+}
+
+.introduction{
+    font-style: italic;
+    border: solid;
+    margin: 10px;
+    border-radius: 10px;
+
+}
+
+a{
+    font-weight:bold;
+}
+
+a:hover{
+    color: rgb(0, 153, 255);
+    text-decoration: none;
+}
